# DjangoTestProject

./: .gitignore  Dockerfile  README.md  pyproject.toml  task.txt
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
djangoProject/: settings.py  urls.py
